adding in example chess files for clarity, and removing virtuals from piece

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,12 @@ set( PROJECT_CPP_SOURCES
   piece.cpp
   )
 
+set ( TEMP_CPP_TESTING_SOURCES
+  chess.cpp
+  )
 
-add_executable(${PROJECT_NAME} ${PROJECT_CPP_SOURCES})
+
+add_executable(${PROJECT_NAME} ${PROJECT_CPP_SOURCES} ${TEMP_CPP_TESTING_SOURCES})
 target_link_libraries(
  BoardGameLib
  sfml-graphics
