--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,16 +44,14 @@ target_link_libraries(
 
 set(copy_source_dir "${CMAKE_SOURCE_DIR}/resources/")
 set(copy_dest_dir "/tmp/")
-set(copy_file_name "*.png")
+set(copy_file_name "tiletexture.png")
 
-#add_custom_command(
-#    TARGET ${PROJECT_NAME} POST_BUILD
-#    COMMAND ${CMAKE_COMMAND} -E make_directory ${copy_dest_dir}
-#)
-#add_custom_command(
-#    TARGET ${PROJECT_NAME} POST_BUILD
-#    COMMAND ${CMAKE_COMMAND} -E copy "${copy_source_dir}/${copy_file_name}" "${copy_dest_dir}/${copy_file_name}"
-#    COMMENT "Copying ${copy_file_name} to tmp directory"
-#)
-
-
+add_custom_command(
+    TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory ${copy_dest_dir}
+)
+add_custom_command(
+    TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy "${copy_source_dir}/${copy_file_name}" "${copy_dest_dir}/${copy_file_name}"
+    COMMENT "Copying ${copy_file_name} to tmp directory"
+)
